--- a/ui-common/package.json
+++ b/ui-common/package.json
@@ -26,15 +26,16 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^12.20.10",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "recoil": "^0.5.2",
     "react-copy-to-clipboard": "^5.0.3",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^12.20.10"
+    "react-dom": "^17.0.2",
+    "recoil": "^0.5.2"
   },
   "dependencies": {
+    "@craco/craco": "^6.4.3",
     "@types/lodash": "^4.14.179",
     "@uiw/react-textarea-code-editor": "^1.4.12",
     "axios": "^0.25.0",
@@ -49,7 +50,6 @@
     "node-fetch": "^3.1.1",
     "numeral": "^2.0.6",
     "protobuf-decoder": "^0.1.0",
-    "react-resizable": "^3.0.4",
     "react-graph-vis": "^1.0.7",
     "react-lowlight": "^3.0.0",
     "react-router-dom": "^6.2.1",
@@ -59,8 +59,7 @@
     "redoc": "^2.0.0-rc.59",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.1",
-    "xml-formatter": "^2.6.0",
-    "@craco/craco": "^6.4.3"
+    "xml-formatter": "^2.6.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
