--- a/.github/workflows/acceptance_tests_on_pr.yml
+++ b/.github/workflows/acceptance_tests_on_pr.yml
@@ -2,6 +2,9 @@ name: Acceptance tests on PR
 
 on: push
 
+env:
+  MIZU_CI_IMAGE: mizu/ci:0.0
+
 concurrency:
   group: acceptance-tests-on-pr-${{ github.ref }}
   cancel-in-progress: true
@@ -20,6 +23,19 @@ jobs:
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: false
+          load: true
+          tags: ${{ env.MIZU_CI_IMAGE }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Setup acceptance test
         run: ./acceptanceTests/setup.sh
