--- a/ui-common/package.json
+++ b/ui-common/package.json
@@ -24,9 +24,6 @@
   },
   "peerDependencies": {
     "@craco/craco": "^6.4.3",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.54",
     "node-sass": "^6.0.1",
@@ -37,6 +34,12 @@
   },
   "dependencies": {
     "@craco/craco": "^6.4.3",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/lab": "^5.0.0-alpha.84",
+    "@mui/material": "^5.8.2",
+    "@mui/styles": "^5.8.0",
     "@types/lodash": "^4.14.182",
     "@uiw/react-textarea-code-editor": "^1.6.0",
     "axios": "^0.27.2",
