--- a/ui/package.json
+++ b/ui/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.3",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.2",
+    "@mui/styles": "^5.8.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.54",
     "@uiw/react-textarea-code-editor": "^1.6.0",
