Add Go `crypto/tls` eBPF tracer for TLS connections (#1120)
* Run `go generate tls_tapper.go`

* Add `golang_uprobes.c`

* Add Golang hooks and offsets

* Add `golangConnection` struct and implement `pollGolangReadWrite` method

* Upgrade `github.com/cilium/ebpf` version to `v0.8.1`

* Fix the linter error

* Move map related stuff to `maps.h` and run `go generate tls_tapper.go`

* Remove unused parameter

* Add an environment variable to test Golang locally

* Replace `Libssl` occurrences with `Ssllib` for consistency

* Fix exe path finding

* Temporarily disable OpenSSL

* Fix the mixed offsets and dissection preparation

* Change the read symbol from `net/http.(*persistConn).Read` to `crypto/tls.(*Conn).Read`

* Remove `len` and `cap` fields

* Fix the indent

* Fix the read data address

* Make `golang_dial_writes` key `__u64` and include the PID

* Fix the read data address one more time

* Temporarily disable the PCAP capture

* Add a uprobe for `net/http.(*gzipReader).Read` to read chunked HTTP response body

* Cancel `golang_crypto_tls_read_uprobe` if it's a gzip read

* Make hash map names more meaningful

* Pass the connection address from `write` to `gzip` through a common address between `gzip` and `dial`

* Fix the probed line number links

* Add `golangReader` struct and implement its `Read` method

* Have a single counter pair and request response matcher per Golang connection

* Add `MIZU_GLOBAL_GOLANG_PATH` environment variable

* `NULL` terminate the bytes with `unix.ByteSliceToString`

* Temporarily reject the gzip chunks

* Add malformed TODOs

* Revert "`NULL` terminate the bytes with `unix.ByteSliceToString`"

This reverts commit 7ee7ef7e44473d17293ca4d43950f7cb52d952bb.

* Bring back `len` and `cap` fields

* Set `len` and `cap` in `golang_net_http_gzipreader_read_uprobe` as well

* Remove two `TODO`s

* Fix the `key_gzip` offsets

* Compress if it's gzip chunk (probabl

--- a/.github/workflows/static_code_analysis.yml
+++ b/.github/workflows/static_code_analysis.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y libpcap-dev
+          ./devops/install-capstone.sh
 
       - name: Check Agent modified files
         id: agent_modified_files
@@ -37,7 +38,7 @@ jobs:
         with:
           version: latest
           working-directory: agent
-          args: --timeout=3m
+          args: --timeout=10m
 
       - name: Check shared modified files
         id: shared_modified_files
@@ -49,7 +50,7 @@ jobs:
         with:
           version: latest
           working-directory: shared
-          args: --timeout=3m
+          args: --timeout=10m
 
       - name: Check tap modified files
         id: tap_modified_files
@@ -61,7 +62,7 @@ jobs:
         with:
           version: latest
           working-directory: tap
-          args: --timeout=3m
+          args: --timeout=10m
 
       - name: Check cli modified files
         id: cli_modified_files
@@ -73,7 +74,7 @@ jobs:
         with:
           version: latest
           working-directory: cli
-          args: --timeout=3m
+          args: --timeout=10m
 
       - name: Check acceptanceTests modified files
         id: acceptanceTests_modified_files
@@ -85,7 +86,7 @@ jobs:
         with:
           version: latest
           working-directory: acceptanceTests
-          args: --timeout=3m
+          args: --timeout=10m
 
       - name: Check tap/api modified files
         id: tap_api_modified_files
