--- a/tap/tlstapper/bpf-builder/Dockerfile
+++ b/tap/tlstapper/bpf-builder/Dockerfile
@@ -1,5 +1,5 @@
-FROM alpine:3.14
+FROM golang:1.17-alpine
 
-RUN apk --no-cache update && apk --no-cache add clang llvm libbpf-dev go linux-headers
+RUN apk --no-cache update && apk --no-cache add clang llvm libbpf-dev linux-headers
 
 WORKDIR /mizu
