--- a/ui-common/package.json
+++ b/ui-common/package.json
@@ -26,7 +26,7 @@
     "@craco/craco": "^6.4.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.54",
-    "node-sass": "^6.0.1",
+    "sass": "^1.52.3",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
