--- a/ui-common/package.json
+++ b/ui-common/package.json
@@ -60,6 +60,7 @@
     "react-scrollable-feed-virtualized": "^1.4.9",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^8.2.0",
+    "recharts": "^2.1.10",
     "redoc": "^2.0.0-rc.71",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
