--- a/.github/workflows/static_code_analysis.yml
+++ b/.github/workflows/static_code_analysis.yml
@@ -1,10 +1,6 @@
-name: Static code analysis
+on: [push, pull_request]
 
-on:
-  pull_request:
-    branches:
-      - 'develop'
-      - 'main'
+name: Static code analysis
 
 permissions:
   contents: read
@@ -113,7 +109,7 @@ jobs:
         with:
           version: latest
           working-directory: tap/extensions/amqp
-      
+
       - name: Check tap/extensions/http modified files
         id: tap_http_modified_files
         run: devops/check_modified_files.sh tap/extensions/http/
@@ -169,11 +165,11 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-        
+
       - name: Check modified UI files
         id: ui_modified_files
         run: devops/check_modified_files.sh ui/
-      
+
       - name: ESLint prerequisites ui
         if: steps.ui_modified_files.outputs.matched == 'true'
         run: |
@@ -187,11 +183,11 @@ jobs:
         run: |
           cd ui
           npm run eslint
-      
+
       - name: Check modified ui-common files
         id: ui_common_modified_files
         run: devops/check_modified_files.sh ui-common/
-      
+
       - name: ESLint prerequisites ui-common
         if: steps.ui_common_modified_files.outputs.matched == 'true'
         run: |
