--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature Request
 description: Request a new feature or an improvement to an existing one
-title: "[Feature]: "
+title: "[Feature Request:]"
 labels: ["enhancement"]
 assignees:
   - alongir
@@ -8,7 +8,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Thanks for taking the time to request a new feature!
   - type: input
     id: contact
     attributes:
@@ -17,46 +17,46 @@ body:
       placeholder: ex. email@example.com
     validations:
       required: false
-  - type: textarea
-    id: what-happened
+  - type: input
+    id: original-thread
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
+      label: Original Thread
+      description: A link to the original discussion thread (e.g. Slack, Discord, Email, Verbal)
+      placeholder:
+    validations:
+      required: false
+  - type: textarea
+    id: the-problem
+    attributes:
+      label: Is your feature request related to a problem? Please describe.
+      description: Please describe the problem you are trying to solve
+      placeholder:
+      value: ""
     validations:
       required: true
-  - type: dropdown
-    id: version
-    attributes:
-      label: Version
-      description: What version of our software are you running?
-      options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
-    validations:
-      required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
   - type: textarea
-    id: logs
+    id: the-solution
     attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
+      label: Describe the solution you'd like to see
+      description: A clear and concise description of what you want to happen.
+      placeholder:
+      value: ""
+    validations:
+      required: false
+  - type: textarea
+    id: the-context
+    attributes:
+      label: Provide additional context
+      description: Add any other context or screenshots about the feature request here.
+      placeholder:
+      value: ""
+    validations:
+      required: false
   - type: checkboxes
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/kubeshark/kubeshark/blob/master/docs/CODE_OF_CONDUCT.md)
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
