--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,4 +1,4 @@
-name: Feature Request
+name: Feature request
 description: Request a new feature or an improvement to an existing one
 title: "[Feature Request:]"
 labels: ["enhancement"]
