--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 name: Test
-
-concurrency:
-  group: kubeshark-tests-validation-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   run-unit-tests:
@@ -22,46 +24,22 @@ jobs:
         with:
           go-version: '^1.17'
 
-      - name: Install libpcap
+      - name: Install dependencies
         shell: bash
         run: |
-          sudo apt-get install libpcap-dev
-
-      - name: Install Capstone
-        shell: bash
-        run: |
+          sudo apt update
+          sudo apt install -y \
+            libpcap-dev \
+            llvm \
+            libbpf-dev \
+            linux-headers-$(uname -r)
           ./devops/install-capstone.sh
 
-      - name: Generate eBPF object files and go bindings
-        id: generate_ebpf
+      - name: Generate eBPF object files and Go bindings
         run: make bpf
 
-      - name: Check CLI modified files
-        id: cli_modified_files
-        run: devops/check_modified_files.sh cli/
-
-      - name: CLI Test
-        if: github.event_name == 'push' || steps.cli_modified_files.outputs.matched == 'true'
-        run: make test-cli
-
-      - name: Check Agent modified files
-        id: agent_modified_files
-        run: devops/check_modified_files.sh agent/
-
-      - name: Agent Test
-        if: github.event_name == 'push' || steps.agent_modified_files.outputs.matched == 'true'
-        run: make test-agent
-
-      - name: Shared Test
-        run: make test-shared
-
-      - name: Check extensions modified files
-        id: ext_modified_files
-        run: devops/check_modified_files.sh tap/extensions/ tap/api/
-
-      - name: Extensions Test
-        if: github.event_name == 'push' || steps.ext_modified_files.outputs.matched == 'true'
-        run: make test-extensions
+      - name: Test
+        run: make test
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
