:zap: Fix the secret name for the `goreleaser` job in `release.yml`

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,4 +88,4 @@ jobs:
           version: ${{ env.GITHUB_REF_NAME }}
           args: release --rm-dist
         env:
-          GITHUB_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
