--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,17 +48,17 @@ jobs:
       - name: Log the version into a .txt file
         shell: bash
         run: |
-          echo '${{ steps.versioning.outputs.version }}' >> cli/bin/version.txt
+          echo '${{ steps.versioning.outputs.version }}' >> bin/version.txt
 
       - name: Release
         uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: "cli/bin/*"
+          artifacts: "bin/*"
           commit: ${{ steps.version_parameters.outputs.branch }}
           tag: ${{ steps.versioning.outputs.version }}
           prerelease: ${{ github.ref != 'refs/heads/main' }}
-          bodyFile: 'cli/bin/README.md'
+          bodyFile: 'bin/README.md'
 
   goreleaser:
     runs-on: ubuntu-latest
