--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  cli:
-    name: Build the CLI and publish
+  release:
+    name: Build and publish a new release
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.17
@@ -60,8 +60,10 @@ jobs:
           prerelease: ${{ github.ref != 'refs/heads/main' }}
           bodyFile: 'bin/README.md'
 
-  goreleaser:
+  brew-tap:
+    name: Create Homebrew formulae
     runs-on: ubuntu-latest
+    needs: [release]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
