--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         id: version
         shell: bash
         run: |
-          echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+          echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/*/})"
           echo "##[set-output name=build_timestamp;]$(echo $(date +%s))"
           echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
 
@@ -43,7 +43,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: "bin/*"
-          commit: ${{ steps.version.outputs.branch }}
           tag: ${{ steps.version.outputs.tag }}
           prerelease: ${{ github.ref != 'refs/heads/master' }}
           bodyFile: 'bin/README.md'
