--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
           echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
 
       - name: Build
-        run: make build-all VER='${{ steps.version.outputs.version }}' BUILD_TIMESTAMP='${{ steps.version.outputs.build_timestamp }}'
+        run: make build-all VER='${{ steps.version.outputs.tag }}' BUILD_TIMESTAMP='${{ steps.version.outputs.build_timestamp }}'
 
       - name: Log the version into a .txt file
         shell: bash
@@ -44,7 +44,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: "bin/*"
           tag: ${{ steps.version.outputs.tag }}
-          prerelease: ${{ github.ref != 'refs/heads/master' }}
+          prerelease: true
           bodyFile: 'bin/README.md'
 
   brew-tap:
