:construction_worker: Add a fine-grained PAT to `brew-tap` as GitHub token `release.yml`

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,4 +72,4 @@ jobs:
           version: ${{ env.GITHUB_REF_NAME }}
           args: release --rm-dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.HOMEBREW_TOKEN }}
