:zap: Fix more issues in `manifests` command

--- a/manifests/01-service-account.yaml
+++ b/manifests/01-service-account.yaml
@@ -7,3 +7,4 @@ metadata:
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
   name: kubeshark-service-account
+  namespace: kubeshark
