--- a/manifests/02-cluster-role.yaml
+++ b/manifests/02-cluster-role.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   creationTimestamp: null
@@ -7,6 +7,7 @@ metadata:
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
   name: kubeshark-cluster-role
+  namespace: kubeshark
 rules:
   - apiGroups:
       - ""
