--- a/manifests/03-cluster-role-binding.yaml
+++ b/manifests/03-cluster-role-binding.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   creationTimestamp: null
@@ -7,6 +7,7 @@ metadata:
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
   name: kubeshark-service-account
+  namespace: kubeshark
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
