--- a/manifests/05-hub-service.yaml
+++ b/manifests/05-hub-service.yaml
@@ -6,6 +6,7 @@ metadata:
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
   name: kubeshark-hub
+  namespace: kubeshark
 spec:
   ports:
     - name: kubeshark-hub
