--- a/manifests/06-front-pod.yaml
+++ b/manifests/06-front-pod.yaml
@@ -7,6 +7,7 @@ metadata:
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
   name: kubeshark-front
+  namespace: kubeshark
 spec:
   containers:
     - env:
