--- a/manifests/08-worker-daemon-set.yaml
+++ b/manifests/08-worker-daemon-set.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   creationTimestamp: null
@@ -17,6 +17,7 @@ spec:
         kubeshark-created-by: kubeshark
         kubeshark-managed-by: kubeshark
       name: kubeshark-worker
+      namespace: kubeshark
     spec:
       containers:
         - command:
