:sparkles: Add `POD_REGEX`, `NAMESPACES`, `STORAGE_LIMIT` and `LICENSE` environment variables to Hub

--- a/manifests/04-hub-pod.yaml
+++ b/manifests/04-hub-pod.yaml
@@ -12,6 +12,13 @@ spec:
   containers:
     - command:
         - ./hub
+      env:
+        - name: POD_REGEX
+          value: .*
+        - name: NAMESPACES
+        - name: STORAGE_LIMIT
+          value: 200MB
+        - name: LICENSE
       image: docker.io/kubeshark/hub:latest
       imagePullPolicy: Always
       name: kubeshark-hub
